--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
           </li>
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Contact</button>
+            <button class="navbar-link" data-nav-link>Photography</button>
           </li>
 
         </ul>
