Update About section

--- a/index.html
+++ b/index.html
@@ -221,17 +221,15 @@
 
         <section class="about-text">
           <p>
-            I'm Creative Director and UI/UX Designer from Sydney, Australia, working in web development and print media.
-            I enjoy
-            turning complex problems into simple, beautiful and intuitive designs.
+            I'm a passionate learner in the field of Computer Science and Technology, 
+            currently pursuing my diploma at Munshiganj Polytechnic Institute. 
+            My primary interest lies in software engineering, and I'm an enthusiastic advocate for open source.
           </p>
 
           <p>
-            My job is to build your website so that it is functional and user-friendly but at the same time attractive.
-            Moreover, I
-            add personal touch to your product and make sure that is eye-catching and easy to use. My aim is to bring
-            across your
-            message and identity in the most creative way. I created web design for many famous brand companies.
+            As a newcomer to the tech field, 
+            I'm fueled by a passion for innovation and a hunger for knowledge. 
+            Every line of code I write is a step towards honing my skills and making a meaningful contribution to the industry.
           </p>
         </section>
 
@@ -254,10 +252,10 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web design</h4>
+                <h4 class="h4 service-item-title">Currently learning</h4>
 
                 <p class="service-item-text">
-                  The most modern and high-quality design made at a professional level.
+                  C programming language and DSA.
                 </p>
               </div>
 
@@ -266,20 +264,20 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="40">
+                <img src="./assets/images/icon-duck.png" alt="CS50 duck icon" width="40">
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web development</h4>
+                <h4 class="h4 service-item-title">Currently doing</h4>
 
                 <p class="service-item-text">
-                  High-quality development of sites at the professional level.
+                  CS50x -- Introduction to Computer Science Course.
                 </p>
               </div>
 
             </li>
 
-            <li class="service-item">
+            <!--<li class="service-item">
 
               <div class="service-icon-box">
                 <img src="./assets/images/icon-app.svg" alt="mobile app icon" width="40">
@@ -309,7 +307,7 @@
                 </p>
               </div>
 
-            </li>
+            </li>-->
 
           </ul>
 
@@ -320,7 +318,7 @@
           - testimonials
         -->
 
-        <section class="testimonials">
+        <!--<section class="testimonials">
 
           <h3 class="h3 testimonials-title">Testimonials</h3>
 
@@ -416,7 +414,7 @@
 
           </ul>
 
-        </section>
+        </section>-->
 
 
         <!--
@@ -468,7 +466,7 @@
           - clients
         -->
 
-        <section class="clients">
+        <!--<section class="clients">
 
           <h3 class="h3 clients-title">Clients</h3>
 
@@ -512,7 +510,7 @@
 
           </ul>
 
-        </section>
+        </section>-->
 
       </article>
 
