--- a/index.html
+++ b/index.html
@@ -542,32 +542,30 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">University school of the arts</h4>
+              <h4 class="h4 timeline-item-title">Munshiganj Polytechnic Institute/h4>
 
-              <span>2007 — 2008</span>
+              <span>2023 — 2027</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+                Diploma in Computer Science and Technology (CST)
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">New york academy of art</h4>
+              <h4 class="h4 timeline-item-title">Golam Nabi Model Pilot High School</h4>
 
-              <span>2006 — 2007</span>
+              <span>2020 — 2022</span>
 
               <p class="timeline-text">
-                Ratione voluptatem sequi nesciunt, facere quisquams facere menda ossimus, omnis voluptas assumenda est
-                omnis..
+                Secondary School Certificate (SSC) <br>
+                Science
               </p>
 
             </li>
 
-            <li class="timeline-item">
+            <!--<li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">High school of art and design</h4>
 
@@ -579,7 +577,7 @@
                 eos.
               </p>
 
-            </li>
+            </li>-->
 
           </ol>
 
@@ -595,7 +593,10 @@
             <h3 class="h3">Experience</h3>
           </div>
 
-          <ol class="timeline-list">
+          <h4 class="h4 timeline-item-title" style="text-align: center;">Journey in progress...
+          </h4>
+
+          <!--<ol class="timeline-list">
 
             <li class="timeline-item">
 
@@ -639,11 +640,11 @@
 
             </li>
 
-          </ol>
+          </ol>-->
 
         </section>
 
-        <section class="skill">
+        <section class="skills">
 
           <h3 class="h3 skills-title">My skills</h3>
 
