Update project section and navbar

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
           </li>
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Portfolio</button>
+            <button class="navbar-link" data-nav-link>Project</button>
           </li>
 
           <li class="navbar-item">
@@ -713,16 +713,16 @@
 
 
       <!--
-        - #PORTFOLIO
+        - #project
       -->
 
-      <article class="portfolio" data-page="portfolio">
+      <article class="project" data-page="project">
 
         <header>
-          <h2 class="h2 article-title">Portfolio</h2>
+          <h2 class="h2 article-title">Projects</h2>
         </header>
 
-        <section class="projects">
+        <section class="project">
 
           <ul class="filter-list">
 
@@ -731,18 +731,21 @@
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Web design</button>
+              <button data-filter-btn>Catagory-1</button>
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Applications</button>
+              <button data-filter-btn>Catagory-2</button>
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Web development</button>
+              <button data-filter-btn>Catagory-3</button>
             </li>
 
           </ul>
+
+          <h4 class="h4 project-placeholder" >Creating magic...
+          </h4>
 
           <div class="filter-select-box">
 
@@ -763,15 +766,15 @@
               </li>
 
               <li class="select-item">
-                <button data-select-item>Web design</button>
+                <button data-select-item>Catagory-1</button>
               </li>
 
               <li class="select-item">
-                <button data-select-item>Applications</button>
+                <button data-select-item>Catagory-2</button>
               </li>
 
               <li class="select-item">
-                <button data-select-item>Web development</button>
+                <button data-select-item>Catagory-3</button>
               </li>
 
             </ul>
@@ -780,7 +783,7 @@
 
           <ul class="project-list">
 
-            <li class="project-item  active" data-filter-item data-category="web development">
+            <li class="project-item  active" data-filter-item data-category="catagory-1">
               <a href="#">
 
                 <figure class="project-img">
@@ -788,17 +791,17 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-1.jpg" alt="finance" loading="lazy">
+                  <img src="./assets/images/Coming Soon.png" alt="Project's title" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Finance</h3>
+                <h3 class="project-title">Project's title</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">Catagory-1</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web development">
+            <li class="project-item  active" data-filter-item data-category="catagory-1">
               <a href="#">
 
                 <figure class="project-img">
@@ -806,17 +809,17 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-2.png" alt="orizon" loading="lazy">
+                  <img src="./assets/images/Coming Soon.png" alt="Project's title" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Orizon</h3>
+                <h3 class="project-title">Project's title</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">Catagory-1</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web design">
+            <li class="project-item  active" data-filter-item data-category="catagory-2">
               <a href="#">
 
                 <figure class="project-img">
@@ -824,17 +827,17 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-3.jpg" alt="fundo" loading="lazy">
+                  <img src="./assets/images/Coming Soon.png" alt="Project's title" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Fundo</h3>
+                <h3 class="project-title">Project's title</h3>
 
-                <p class="project-category">Web design</p>
+                <p class="project-category">Catagory-2</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="applications">
+            <li class="project-item  active" data-filter-item data-category="catagory-3">
               <a href="#">
 
                 <figure class="project-img">
@@ -842,17 +845,17 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-4.png" alt="brawlhalla" loading="lazy">
+                  <img src="./assets/images/Coming Soon.png" alt="Project's title" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Brawlhalla</h3>
+                <h3 class="project-title">Project's title</h3>
 
-                <p class="project-category">Applications</p>
+                <p class="project-category">Catagory-3</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web design">
+            <li class="project-item  active" data-filter-item data-category="catagory-2">
               <a href="#">
 
                 <figure class="project-img">
@@ -860,17 +863,17 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-5.png" alt="dsm." loading="lazy">
+                  <img src="./assets/images/Coming Soon.png" alt="Project's title." loading="lazy">
                 </figure>
 
-                <h3 class="project-title">DSM.</h3>
+                <h3 class="project-title">Project's title.</h3>
 
-                <p class="project-category">Web design</p>
+                <p class="project-category">Catagory-2</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web design">
+            <!--<li class="project-item  active" data-filter-item data-category="Catagory-2">
               <a href="#">
 
                 <figure class="project-img">
@@ -878,17 +881,17 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-6.png" alt="metaspark" loading="lazy">
+                  <img src="./assets/images/Coming Soon.png" alt="Project's title" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">MetaSpark</h3>
+                <h3 class="project-title">Project's title</h3>
 
-                <p class="project-category">Web design</p>
+                <p class="project-category">Catagory-2</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web development">
+            <li class="project-item  active" data-filter-item data-category="Catagory-1">
               <a href="#">
 
                 <figure class="project-img">
@@ -896,17 +899,17 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-7.png" alt="summary" loading="lazy">
+                  <img src="./assets/images/Coming Soon.png" alt="Project's title" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Summary</h3>
+                <h3 class="project-title">Project's title</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">Catagory-1</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="applications">
+            <li class="project-item  active" data-filter-item data-category="Catagory-3">
               <a href="#">
 
                 <figure class="project-img">
@@ -914,17 +917,17 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-8.jpg" alt="task manager" loading="lazy">
+                  <img src="./assets/images/Coming Soon.png" alt="Project's title" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Task Manager</h3>
+                <h3 class="project-title">Project's title</h3>
 
-                <p class="project-category">Applications</p>
+                <p class="project-category">Catagory-3</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web development">
+            <li class="project-item  active" data-filter-item data-category="Catagory-1">
               <a href="#">
 
                 <figure class="project-img">
@@ -932,15 +935,15 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-9.png" alt="arrival" loading="lazy">
+                  <img src="./assets/images/Coming Soon.png" alt="Project's title" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Arrival</h3>
+                <h3 class="project-title">Project's title</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">Catagory-1</p>
 
               </a>
-            </li>
+            </li>-->
 
           </ul>
 
