Updated target in blog posts

--- a/index.html
+++ b/index.html
@@ -966,11 +966,11 @@
         </header>
 
         <section class="blog-posts">
-          
+
           <ul class="blog-posts-list">
 
             <li class="blog-post-item">
-              <a href="https://medium.com/@MrSafin/cracking-the-binary-code-how-computers-process-information-in-0s-and-1s-7ab222edb551">
+              <a href="https://medium.com/@MrSafin/cracking-the-binary-code-how-computers-process-information-in-0s-and-1s-7ab222edb551" target="_blank">
 
                 <figure class="blog-banner-box">
                   <img src="./assets/images/cracking-the-binary-code.jpg" alt="Cracking the Binary Code" loading="lazy">
