Fix bug in Education and update skill section

--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Munshiganj Polytechnic Institute/h4>
+              <h4 class="h4 timeline-item-title">Munshiganj Polytechnic Institute</h4>
 
               <span>2023 — 2027</span>
 
@@ -648,7 +648,10 @@
 
           <h3 class="h3 skills-title">My skills</h3>
 
-          <ul class="skills-list content-card">
+          <h4 class="h4 timeline-item-title" style="text-align: center;">Coming soon...
+          </h4>
+
+          <!--<ul class="skills-list content-card">
 
             <li class="skills-item">
 
@@ -702,7 +705,7 @@
 
             </li>
 
-          </ul>
+          </ul>-->
 
         </section>
 
