Add blog site link

--- a/index.html
+++ b/index.html
@@ -968,6 +968,20 @@
           <h2 class="h2 article-title">Blog</h2>
         </header>
 
+        <div>
+
+          <ul class="blog-site-list">
+
+            <li class="social-item">
+              <a href="https://medium.com/@mrsafin" class="social-link">
+                <ion-icon name="logo-medium"></ion-icon>
+              </a>
+            </li>
+
+          </ul>
+
+        </div>
+
         <section class="blog-posts">
 
           <ul class="blog-posts-list">
